objects/OSM_Features_Maintenance__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting to maintained the features ON/OFF</description>
    <fields>
        <fullName>CC_Partial_Cancellation__c</fullName>
        <label>CC_Partial_Cancellation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Subscription_Length__c</fullName>
        <label>Default Subscription Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Partial_Cancellation__c</fullName>
        <label>PO_Partial_Cancellation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Length__c</fullName>
        <label>Subscription Length</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>OSM_Features_Maintenance</label>
</CustomObject>